--- a/Notizen/Hindernisvermeidung-Folgesystem.tex
+++ b/Notizen/Hindernisvermeidung-Folgesystem.tex
@@ -63,8 +63,12 @@ Folgesystem}\label{fortgeschrittene-hindernisvermeidung-und-intelligentes-folges
 \subsection{Erstellung eines fortgeschrittenen
 Hindernisvermeidungssystems}\label{erstellung-eines-fortgeschrittenen-hindernisvermeidungssystems}}
 
+\hypertarget{version-1-hindernisvermeidungssystems}{%
+\subsubsection{Version 1
+Hindernisvermeidungssystems}\label{version-1-hindernisvermeidungssystems}}
+
 \hypertarget{keywords-fortgeschrittenen-hindernisvermeidungssystems}{%
-\subsubsection{Keywords fortgeschrittenen
+\paragraph{Keywords fortgeschrittenen
 Hindernisvermeidungssystems}\label{keywords-fortgeschrittenen-hindernisvermeidungssystems}}
 
 \begin{itemize}
@@ -118,8 +122,12 @@ Hindernisvermeidungssystems}\label{keywords-fortgeschrittenen-hindernisvermeidun
   auf der Zeitdauer des Echo-Signals.
 \end{itemize}
 
+\hypertarget{beschreibung-version-1-hindernisvermeidungssystems}{%
+\paragraph{Beschreibung Version 1
+Hindernisvermeidungssystems}\label{beschreibung-version-1-hindernisvermeidungssystems}}
+
 \hypertarget{initialisierung}{%
-\subsubsection{Initialisierung}\label{initialisierung}}
+\subparagraph{Initialisierung}\label{initialisierung}}
 
 \begin{itemize}
 
@@ -132,7 +140,7 @@ Hindernisvermeidungssystems}\label{keywords-fortgeschrittenen-hindernisvermeidun
 \end{itemize}
 
 \hypertarget{hauptlogik-im-loop}{%
-\subsubsection{Hauptlogik im loop()}\label{hauptlogik-im-loop}}
+\subparagraph{Hauptlogik im loop()}\label{hauptlogik-im-loop}}
 
 \begin{itemize}
 
@@ -167,7 +175,7 @@ Hindernisvermeidungssystems}\label{keywords-fortgeschrittenen-hindernisvermeidun
 \end{itemize}
 
 \hypertarget{distanzmessung-und-bewegungssteuerung}{%
-\subsubsection{Distanzmessung und
+\subparagraph{Distanzmessung und
 Bewegungssteuerung}\label{distanzmessung-und-bewegungssteuerung}}
 
 \begin{itemize}
@@ -200,7 +208,7 @@ Bewegungssteuerung}\label{distanzmessung-und-bewegungssteuerung}}
 \end{itemize}
 
 \hypertarget{datenfluss-und-fehlerbehandlung}{%
-\subsubsection{Datenfluss und
+\subparagraph{Datenfluss und
 Fehlerbehandlung}\label{datenfluss-und-fehlerbehandlung}}
 
 \begin{itemize}
@@ -223,7 +231,7 @@ Fehlerbehandlung}\label{datenfluss-und-fehlerbehandlung}}
 \end{itemize}
 
 \hypertarget{benutzerinteraktion}{%
-\subsubsection{Benutzerinteraktion}\label{benutzerinteraktion}}
+\subparagraph{Benutzerinteraktion}\label{benutzerinteraktion}}
 
 \begin{itemize}
 
@@ -235,7 +243,7 @@ Fehlerbehandlung}\label{datenfluss-und-fehlerbehandlung}}
 \end{itemize}
 
 \hypertarget{schleifen-und-bedingte-anweisungen}{%
-\subsubsection{Schleifen und bedingte
+\subparagraph{Schleifen und bedingte
 Anweisungen}\label{schleifen-und-bedingte-anweisungen}}
 
 \begin{itemize}
@@ -249,6 +257,10 @@ Anweisungen}\label{schleifen-und-bedingte-anweisungen}}
 \end{itemize}
 
 \newpage
+
+\hypertarget{flussdiagramm-version-1-hindernisvermeidungssystems}{%
+\paragraph{Flussdiagramm Version 1
+Hindernisvermeidungssystems}\label{flussdiagramm-version-1-hindernisvermeidungssystems}}
 
 \begin{lstlisting}
                   +-----------------+
@@ -317,6 +329,10 @@ Anweisungen}\label{schleifen-und-bedingte-anweisungen}}
 \end{lstlisting}
 
 \newpage
+
+\hypertarget{code-version-1-hindernisvermeidungssystems}{%
+\subsubsection{Code Version 1
+Hindernisvermeidungssystems}\label{code-version-1-hindernisvermeidungssystems}}
 
 \begin{lstlisting}[language={C++}]
 /**
@@ -459,8 +475,12 @@ void backLeft(int speed) {
 
 \newpage
 
+\hypertarget{version-2-hindernisvermeidungssystems}{%
+\subsubsection{Version 2
+Hindernisvermeidungssystems}\label{version-2-hindernisvermeidungssystems}}
+
 \hypertarget{schluxfcsselbegriffe-und-bedeutungen}{%
-\subsubsection{Schlüsselbegriffe und
+\paragraph{Schlüsselbegriffe und
 Bedeutungen}\label{schluesselbegriffe-und-bedeutungen}}
 
 \begin{itemize}
@@ -515,6 +535,10 @@ Bewegungsfunktionen
 
 \newpage
 
+\hypertarget{flussdiagramm-version-2-hindernisvermeidungssystems}{%
+\paragraph{Flussdiagramm Version 2
+Hindernisvermeidungssystems}\label{flussdiagramm-version-2-hindernisvermeidungssystems}}
+
 \begin{lstlisting}
                  +-------------------+
                  |    Start          |
@@ -565,8 +589,9 @@ Bewegungsfunktionen
 
 \newpage
 
-\hypertarget{beschreibung}{%
-\subsubsection{Beschreibung}\label{beschreibung}}
+\hypertarget{beschreibung-version-2-hindernisvermeidungssystems}{%
+\paragraph{Beschreibung Version 2
+Hindernisvermeidungssystems}\label{beschreibung-version-2-hindernisvermeidungssystems}}
 
 Das Programm, das Sie beschreiben, steuert einen autonomen Rover durch
 die Integration verschiedener Sensoren und Bewegungslogiken. Der Kern
@@ -577,7 +602,7 @@ entsprechend zu navigieren. Hier eine detaillierte Beschreibung der
 Hauptlogik und des Datenflusses:
 
 \hypertarget{initialisierung-1}{%
-\paragraph{Initialisierung}\label{initialisierung-1}}
+\subparagraph{Initialisierung}\label{initialisierung-1}}
 
 Zu Beginn initialisiert das Programm die Systeme und Sensoren. Dies
 umfasst die Konfiguration der Pin-Belegungen für den Ultraschallsensor
@@ -586,7 +611,7 @@ und die Infrarotsensoren sowie die Initialisierung der Motorsteuerung
 gestartet, um Ausgaben für Debugging-Zwecke zu ermöglichen.
 
 \hypertarget{hauptlogik-loop}{%
-\paragraph{Hauptlogik (Loop)}\label{hauptlogik-loop}}
+\subparagraph{Hauptlogik (Loop)}\label{hauptlogik-loop}}
 
 Im Hauptteil des Programms findet die wiederkehrende Logik statt, die
 sich wie folgt zusammensetzt:
@@ -630,7 +655,7 @@ sich wie folgt zusammensetzt:
 \end{enumerate}
 
 \hypertarget{schluxfcsselaspekte}{%
-\paragraph{Schlüsselaspekte}\label{schluesselaspekte}}
+\subparagraph{Schlüsselaspekte}\label{schluesselaspekte}}
 
 \begin{itemize}
 
@@ -652,6 +677,10 @@ sich wie folgt zusammensetzt:
 \end{itemize}
 
 \newpage
+
+\hypertarget{code-version-2-hindernisvermeidungssystems}{%
+\paragraph{Code Version 2
+Hindernisvermeidungssystems}\label{code-version-2-hindernisvermeidungssystems}}
 
 \begin{lstlisting}[language={C++}]
 /**
@@ -958,7 +987,7 @@ void stopMove() {
 \end{lstlisting}
 
 \hypertarget{uxfcberpruxfcfung}{%
-\subsubsection{Überprüfung}\label{ueberpruefung}}
+\paragraph{Überprüfung}\label{ueberpruefung}}
 
 \begin{itemize}
 \item
@@ -988,7 +1017,7 @@ void stopMove() {
 \end{itemize}
 
 \hypertarget{verbesserungsvorschluxe4ge}{%
-\subsubsection{Verbesserungsvorschläge}\label{verbesserungsvorschlaege}}
+\paragraph{Verbesserungsvorschläge}\label{verbesserungsvorschlaege}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1032,6 +1061,8 @@ Berücksichtigung der genannten Verbesserungsvorschläge könnte die
 Leistungsfähigkeit und Zuverlässigkeit des Systems weiter gesteigert
 werden.
 
+\newpage
+
 \hypertarget{intelligentes-folgesystem}{%
 \subsection{Intelligentes Folgesystem}\label{intelligentes-folgesystem}}
 
@@ -1049,6 +1080,10 @@ werden.
 \end{lstlisting}
 
 \newpage
+
+\hypertarget{code-intelligentes-folgesystem}{%
+\subsubsection{Code Intelligentes
+Folgesystem}\label{code-intelligentes-folgesystem}}
 
 \begin{lstlisting}[language={C++}]
 /**
