--- a/Notizen/Oszilloskop.tex
+++ b/Notizen/Oszilloskop.tex
@@ -111,118 +111,307 @@ Berücksichtigung}\label{faktoren-zur-beruecksichtigung}}
 \subsection{Siglent SDS1104X-E
 Oszilloskop}\label{siglent-sds1104x-e-oszilloskop}}
 
-Mit dem Siglent SDS1104X-E Oszilloskop können Sie eine Vielzahl von
-Messungen durchführen, die für die Entwicklung und Fehlersuche an einem
-autonomen Rover wie dem in Ihrem Code beschriebenen sehr nützlich sind.
+Das Siglent SDS1104X-E ist ein digitales Speicheroszilloskop (DSO), das
+sich durch eine hervorragende Mischung aus Leistung, Funktionen und
+Preis auszeichnet, wodurch es sowohl für Hobbyisten als auch für
+professionelle Anwender attraktiv ist.
 
-\hypertarget{ultraschallsensor-und-ir-sensoren}{%
-\subsubsection{Ultraschallsensor und
-IR-Sensoren}\label{ultraschallsensor-und-ir-sensoren}}
-
-\begin{itemize}
-
-\item
-  \textbf{Signalform}: Überprüfen Sie die Form der Trigger-Signale und
-  der Echo-Signale des Ultraschallsensors sowie der Signale der
-  IR-Sensoren, um sicherzustellen, dass sie korrekt generiert und
-  empfangen werden.
-\item
-  \textbf{Timing}: Messen Sie die Zeitdauer zwischen dem Senden und
-  Empfangen der Signale, um die Distanzmessungen zu verifizieren und zu
-  kalibrieren.
-\item
-  \textbf{Störungen}: Suchen Sie nach möglichen elektromagnetischen
-  Störungen oder Signalübersprechen zwischen den Sensoren, die die
-  Messgenauigkeit beeinträchtigen könnten.
-\end{itemize}
-
-\hypertarget{x-getriebemotoren}{%
-\subsubsection{6x Getriebemotoren}\label{x-getriebemotoren}}
+\hypertarget{eigenschaften-des-siglent-sds1104x-e}{%
+\subsubsection{Eigenschaften des Siglent
+SDS1104X-E}\label{eigenschaften-des-siglent-sds1104x-e}}
 
 \begin{itemize}
 
 \item
-  \textbf{PWM-Signal}: Analysieren Sie die PWM-Signale, die an die
-  Motoren gesendet werden, um sicherzustellen, dass die Geschwindigkeit
-  und Richtung der Motoren wie erwartet gesteuert werden.
+  \textbf{Bandbreite}: 100 MHz, erweiterbar durch Software-Upgrade auf
+  höhere Bandbreiten, was es flexibel für eine Vielzahl von Anwendungen
+  macht.
 \item
-  \textbf{Spannungsschwankungen}: Beobachten Sie die Spannung an den
-  Motoren während des Betriebs, um festzustellen, ob es zu unerwünschten
-  Spannungseinbrüchen kommt, die die Motorleistung beeinträchtigen
-  könnten.
+  \textbf{Kanäle}: Vier analoge Kanäle, die simultane Messungen
+  ermöglichen und es ideal für komplexe Elektronikprojekte machen, bei
+  denen mehrere Signale gleichzeitig verfolgt werden müssen.
 \item
-  \textbf{Motorstart- und Stoppzeiten}: Messen Sie, wie schnell die
-  Motoren auf Befehle reagieren, um die Effizienz der Bewegungssteuerung
-  zu optimieren.
+  \textbf{Abtastrate}: Bis zu 1 GSa/s (Giga-Samples pro Sekunde), was
+  eine hohe Detailtreue bei der Darstellung schneller Signale
+  ermöglicht.
+\item
+  \textbf{Speichertiefe}: 14 Mpts (Mega-Punkte) pro Kanal, was lange
+  Aufzeichnungen bei hoher Abtastrate ermöglicht und somit eine
+  detaillierte Analyse von Signalen über längere Zeiträume hinweg
+  unterstützt.
+\item
+  \textbf{Display}: Ein großes 7-Zoll-TFT-LCD-Farbdisplay bietet eine
+  klare und übersichtliche Anzeige der Messdaten.
+\item
+  \textbf{Messfunktionen}: Es bietet eine Vielzahl von automatisierten
+  Messfunktionen sowie mathematische Funktionen wie FFT (Schnelle
+  Fourier-Transformation) für die Signalanalyse.
+\item
+  \textbf{Konnektivität}: USB- und LAN-Schnittstellen für
+  Datenübertragung und Fernsteuerung erweitern die Einsatzmöglichkeiten
+  in verschiedenen Umgebungen.
 \end{itemize}
 
-\hypertarget{batterie}{%
-\subsubsection{18650 Batterie}\label{batterie}}
+\hypertarget{anwendungsmuxf6glichkeiten}{%
+\subsubsection{Anwendungsmöglichkeiten}\label{anwendungsmoeglichkeiten}}
+
+Mit dem Siglent SDS1104X-E können Sie eine breite Palette von Mess- und
+Analyseaufgaben durchführen, darunter:
 
 \begin{itemize}
 
 \item
-  \textbf{Spannungsverlauf}: Überwachen Sie die Spannung der Batterie
-  unter Last, um die Batterielebensdauer und den Einfluss auf die
-  Systemleistung zu bewerten.
+  \textbf{Signalprüfung}: Überprüfen Sie die Integrität und Qualität von
+  analogen und digitalen Signalen.
 \item
-  \textbf{Stromaufnahme}: Messen Sie den Stromverbrauch des gesamten
-  Systems, um die Energieeffizienz zu beurteilen und sicherzustellen,
-  dass die Batterie die erforderliche Leistung liefern kann.
+  \textbf{Fehlersuche}: Identifizieren Sie Probleme in elektronischen
+  Schaltungen, von einfachen Geräten bis hin zu komplexen Systemen.
+\item
+  \textbf{Design und Entwicklung}: Testen und Verifizieren von
+  elektronischen Designs während des Entwicklungsprozesses.
+\item
+  \textbf{Bildungsprojekte}: Ideal für Lehr- und Lernumgebungen, um die
+  Grundlagen der Elektronik und Signalverarbeitung zu vermitteln.
 \end{itemize}
 
-\hypertarget{messungen}{%
-\subsection{Messungen}\label{messungen}}
+Um das volle Potenzial Ihres Siglent SDS1104X-E Oszilloskops
+auszuschöpfen, ist es wichtig, sich mit den Grundlagen vertraut zu
+machen, die Voreinstellungen und automatischen Messfunktionen effektiv
+zu nutzen und die mathematischen sowie Analysefunktionen zu erkunden.
 
-\hypertarget{ultraschallsensor-und-ir-sensoren-messen}{%
-\subsubsection{Ultraschallsensor und IR-Sensoren
-messen}\label{ultraschallsensor-und-ir-sensoren-messen}}
+\hypertarget{lernen-sie-die-grundlagen}{%
+\subsubsection{1. Lernen Sie die
+Grundlagen}\label{lernen-sie-die-grundlagen}}
 
-\hypertarget{signalform}{%
-\paragraph{Signalform}\label{signalform}}
+\hypertarget{a.-aufbau-und-bedienelemente}{%
+\paragraph{a. Aufbau und
+Bedienelemente}\label{a.-aufbau-und-bedienelemente}}
 
 \begin{itemize}
 
 \item
-  \textbf{Setup}: Verbinden Sie den Ausgangspunkt des Ultraschallsensors
-  (TRIG) und den Eingangspunkt (ECHO) sowie die Ausgänge der IR-Sensoren
-  mit den verschiedenen Kanälen Ihres Oszilloskops. Verwenden Sie
-  Tastköpfe mit passender Bandbreite und stellen Sie sicher, dass sie
-  korrekt auf das Signalniveau eingestellt sind (x1 oder x10, abhängig
-  von der erwarteten Signalstärke).
+  \textbf{Display}: Vertraut machen mit dem Layout des Displays,
+  inklusive der Wellenformanzeige, Menüleiste und Statusanzeigen.
 \item
-  \textbf{Messung}: Aktivieren Sie den Sensor und beobachten Sie die
-  Trigger- und Echo-Signale auf dem Bildschirm. Achten Sie auf die Form
-  des Signals, um sicherzustellen, dass keine Verzerrungen oder
-  unerwartete Änderungen vorliegen.
+  \textbf{Tastenfeld}: Lernen Sie die Funktionen der verschiedenen
+  Tasten kennen, z.B. die vertikalen und horizontalen Skalierungstasten,
+  die Menütasten für die Kanalauswahl und die Einstellungstasten für
+  Trigger und Akquisition.
+\item
+  \textbf{Drehknöpfe}: Üben Sie die Verwendung der Drehknöpfe für die
+  Einstellung der Signalanzeige, wie z.B. die Positionierung der
+  Wellenform, die Feinjustierung der Skalierung und die
+  Trigger-Niveau-Einstellung.
 \end{itemize}
 
-\hypertarget{timing}{%
-\paragraph{Timing}\label{timing}}
+\hypertarget{b.-grundlegende-messungen}{%
+\paragraph{b. Grundlegende Messungen}\label{b.-grundlegende-messungen}}
 
 \begin{itemize}
 
 \item
-  \textbf{Messung}: Verwenden Sie die Zeitbasis und die Cursor-Funktion
-  Ihres Oszilloskops, um die Zeit zwischen dem Senden des
-  Trigger-Signals und dem Empfang des Echo-Signals zu messen. Diese Zeit
-  wird verwendet, um die Entfernung zum Objekt zu berechnen. Vergleichen
-  Sie diese Zeit mit den erwarteten Werten, um die Genauigkeit Ihrer
-  Messung zu verifizieren.
+  \textbf{Kanalauswahl}: Aktivieren Sie einzelne Kanäle und passen Sie
+  die Einstellungen wie Kopplung (AC/DC), Bandbreitenbegrenzung und
+  Vertikalskalierung an.
+\item
+  \textbf{Triggerung}: Verstehen Sie, wie Sie die Triggerquelle und -art
+  einstellen, um stabile Signalanzeigen zu erhalten. Experimentieren Sie
+  mit verschiedenen Triggermodi wie Edge, Pulse und Video.
+\item
+  \textbf{Zeitbasis und Skalierung}: Lernen Sie, wie Sie die horizontale
+  Skalierung anpassen, um verschiedene Teile des Signals über die Zeit
+  zu betrachten.
 \end{itemize}
 
-\hypertarget{stuxf6rungen}{%
-\paragraph{Störungen}\label{stoerungen}}
+\hypertarget{nutzen-sie-die-voreinstellungen-und-automatischen-messfunktionen}{%
+\subsubsection{2. Nutzen Sie die Voreinstellungen und automatischen
+Messfunktionen}\label{nutzen-sie-die-voreinstellungen-und-automatischen-messfunktionen}}
+
+\hypertarget{a.-voreinstellungen-verwenden}{%
+\paragraph{a. Voreinstellungen
+verwenden}\label{a.-voreinstellungen-verwenden}}
 
 \begin{itemize}
 
 \item
-  \textbf{Untersuchung}: Überprüfen Sie das Signal auf unerwünschte
-  Spitzen oder Rauschen, die auf elektromagnetische Störungen hindeuten
-  könnten. Platzieren Sie die Sensoren möglicherweise näher beieinander
-  oder fügen Sie Abschirmungen hinzu, um das Signalübersprechen zu
-  minimieren.
+  \textbf{Auto Set}: Nutzen Sie die „Auto Set>>-Taste, um automatisch
+  eine geeignete Vertikal- und Horizontalskalierung für das angezeigte
+  Signal zu wählen.
+\item
+  \textbf{Messvorlagen}: Verwenden Sie vordefinierte Messvorlagen für
+  häufige Messaufgaben, um Zeit zu sparen.
 \end{itemize}
+
+\hypertarget{b.-automatische-messungen}{%
+\paragraph{b. Automatische Messungen}\label{b.-automatische-messungen}}
+
+\begin{itemize}
+
+\item
+  \textbf{Messfunktionen}: Zugriff auf die automatischen Messfunktionen
+  für Parameter wie Frequenz, Amplitude, Anstiegszeit, Fallzeit und
+  vieles mehr.
+\item
+  \textbf{Statistische Analyse}: Aktivieren Sie die statistische Analyse
+  für Ihre Messungen, um Durchschnittswerte, Standardabweichungen und
+  andere statistische Daten zu erhalten.
+\end{itemize}
+
+\hypertarget{experimentieren-sie-mit-den-mathematischen-und-analysefunktionen}{%
+\subsubsection{3. Experimentieren Sie mit den mathematischen und
+Analysefunktionen}\label{experimentieren-sie-mit-den-mathematischen-und-analysefunktionen}}
+
+\hypertarget{a.-mathematische-operationen}{%
+\paragraph{a. Mathematische
+Operationen}\label{a.-mathematische-operationen}}
+
+\begin{itemize}
+
+\item
+  \textbf{Grundlagen}: Nutzen Sie mathematische Operationen wie
+  Addition, Subtraktion, Multiplikation und Division von Signalen, um
+  komplexe Signale zu analysieren.
+\item
+  \textbf{FFT (Schnelle Fourier-Transformation)}: Verwenden Sie die
+  FFT-Funktion, um das Frequenzspektrum Ihres Signals zu analysieren.
+  Dies ist besonders nützlich für die Untersuchung von
+  Signalverzerrungen, Harmonischen und Rauschen.
+\end{itemize}
+
+\hypertarget{b.-erweiterte-analyse}{%
+\paragraph{b. Erweiterte Analyse}\label{b.-erweiterte-analyse}}
+
+\begin{itemize}
+
+\item
+  \textbf{Signaldekodierung}: Wenn Ihr Modell es unterstützt, nutzen Sie
+  die Signaldekodierungsfunktionen für serielle Busse wie I²C, SPI,
+  UART/RS232, um Kommunikationsprotokolle zu analysieren.
+\item
+  \textbf{Wellenform-Aufzeichnung}: Experimentieren Sie mit der
+  Aufzeichnung und dem Rückblick von Wellenformsequenzen, um transiente
+  Ereignisse zu erfassen und zu analysieren.
+\end{itemize}
+
+\hypertarget{messen}{%
+\subsection{Messen}\label{messen}}
+
+Um Messungen mit einem Ultraschallsensor und einem IR-Sensor unter
+Verwendung eines Oszilloskops durchzuführen, müssen Sie die spezifischen
+Eigenschaften dieser Sensoren und die Art der Signale, die sie erzeugen
+oder empfangen, berücksichtigen. Hier sind allgemeine Richtlinien für
+beide Sensortypen:
+
+\hypertarget{ultraschallsensor-messungen}{%
+\subsubsection{Ultraschallsensor-Messungen}\label{ultraschallsensor-messungen}}
+
+Ultraschallsensoren senden Schallwellen aus und empfangen das Echo
+dieser Wellen, um die Entfernung zu Objekten zu messen. Typischerweise
+werden Sie das Trigger-Signal (das den Sendevorgang startet) und das
+Echo-Signal (das den Empfang des zurückkehrenden Schalls darstellt)
+messen wollen.
+
+\hypertarget{einstellungen-fuxfcr-das-oszilloskop-ultraschallsensoren}{%
+\paragraph{Einstellungen für das Oszilloskop
+Ultraschallsensoren}\label{einstellungen-fuer-das-oszilloskop-ultraschallsensoren}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+
+\item
+  \textbf{Kopplung}: Stellen Sie die Eingangskopplung auf DC, um sowohl
+  den Gleichspannungs- als auch den Wechselspannungsanteil des Signals
+  zu erfassen.
+\item
+  \textbf{Zeitbasis}: Wählen Sie eine Zeitbasis, die es Ihnen
+  ermöglicht, den gesamten Vorgang des Sendens und Empfangens des Echos
+  zu sehen. Ein guter Startpunkt könnte 1 ms/Div sein, abhängig von der
+  erwarteten Reichweite des Sensors.
+\item
+  \textbf{Triggerung}: Verwenden Sie die Edge-Triggerung, getriggert auf
+  das Trigger-Signal, um das Oszilloskop zu stabilisieren und das Senden
+  des Signals sichtbar zu machen.
+\item
+  \textbf{Vertikalskalierung}: Passen Sie die Vertikalskalierung an, um
+  die Amplitude des Trigger- und Echo-Signals klar zu sehen. Dies hängt
+  von den Signalpegeln ab, die Ihr Sensor verwendet.
+\end{enumerate}
+
+\hypertarget{messungen-ultraschallsensoren}{%
+\paragraph{Messungen
+Ultraschallsensoren}\label{messungen-ultraschallsensoren}}
+
+\begin{itemize}
+
+\item
+  \textbf{Trigger-Signal}: Überprüfen Sie die Dauer des Trigger-Signals,
+  um sicherzustellen, dass es den Spezifikationen des Sensors entspricht
+  (häufig 10 μs).
+\item
+  \textbf{Echo-Zeit}: Messen Sie die Zeit zwischen dem Ende des
+  Trigger-Signals und dem Beginn des Echo-Signals, um die Entfernung zu
+  berechnen. Die Echo-Zeit ist proportional zur Entfernung zum Objekt.
+\item
+  \textbf{Signalform}: Beobachten Sie die Form des Echo-Signals, um die
+  Integrität und Stärke des empfangenen Signals zu bewerten.
+\end{itemize}
+
+\hypertarget{ir-sensor-messungen}{%
+\subsubsection{IR-Sensor-Messungen}\label{ir-sensor-messungen}}
+
+IR-Sensoren (Infrarotsensoren) werden oft für Näherungsmessungen,
+Objekterkennung oder als Teil eines Kommunikationssystems verwendet. Die
+Messung kann die Überprüfung des Ausgangssignals in Reaktion auf ein
+erkanntes Objekt oder die Übertragung/der Empfang von
+IR-Kommunikationssignalen umfassen.
+
+\hypertarget{einstellungen-fuxfcr-das-oszilloskop-ir-sensor}{%
+\paragraph{Einstellungen für das Oszilloskop
+IR-Sensor}\label{einstellungen-fuer-das-oszilloskop-ir-sensor}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+
+\item
+  \textbf{Kopplung}: DC-Kopplung, um das vollständige Signal zu
+  erfassen.
+\item
+  \textbf{Zeitbasis}: Die Zeitbasis sollte auf die erwartete
+  Signalgeschwindigkeit eingestellt werden. Für eine kontinuierliche
+  Signalüberwachung kann eine breitere Zeitbasis (z.B. 100 ms/Div)
+  nützlich sein, während für die Untersuchung von Kommunikationssignalen
+  eine engere Zeitbasis (z.B. 10 μs/Div) erforderlich sein kann.
+\item
+  \textbf{Triggerung}: Verwenden Sie die Edge-Triggerung, ausgelöst
+  durch das IR-Signal, um das Oszilloskop zu stabilisieren.
+\item
+  \textbf{Vertikalskalierung}: Passen Sie diese so an, dass das
+  IR-Signal deutlich sichtbar ist, je nach Ausgangspegel des Sensors.
+\end{enumerate}
+
+\hypertarget{messungen-ir-sensoren}{%
+\paragraph{Messungen IR-Sensoren}\label{messungen-ir-sensoren}}
+
+\begin{itemize}
+
+\item
+  \textbf{Signalpräsenz}: Bestätigen Sie die Präsenz des IR-Signals,
+  wenn ein Objekt erkannt wird oder eine IR-Kommunikation stattfindet.
+\item
+  \textbf{Signalform}: Beurteilen Sie die Form des IR-Signals, um die
+  Qualität und Stärke der Detektion oder Kommunikation zu überprüfen.
+\item
+  \textbf{Kommunikationsdaten}: Bei der Messung von
+  IR-Kommunikationssignalen, überprüfen Sie die Pulsbreiten, um die
+  übertragenen Daten zu decodieren.
+\end{itemize}
+
+Um die in Ihrem Projekt verwendeten 6x Getriebemotoren und 18650
+Batterien effektiv mit einem Oszilloskop zu messen und zu analysieren,
+folgen Sie diesen detaillierten Anweisungen. Diese Anleitung hilft
+Ihnen, wichtige Aspekte wie PWM-Signale, Spannungsschwankungen,
+Motorstart- und Stoppzeiten sowie den Spannungsverlauf und die
+Stromaufnahme der Batterie zu überwachen.
 
 \hypertarget{x-getriebemotoren-messen}{%
 \subsubsection{6x Getriebemotoren
@@ -231,41 +420,61 @@ messen}\label{x-getriebemotoren-messen}}
 \hypertarget{pwm-signal}{%
 \paragraph{PWM-Signal}\label{pwm-signal}}
 
-\begin{itemize}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 
 \item
-  \textbf{Messung}: Verbinden Sie das Oszilloskop mit den PWM-Ausgängen,
-  die die Motoren steuern. Beobachten Sie die Pulsbreite und die
-  Frequenz der PWM-Signale, um sicherzustellen, dass sie den erwarteten
-  Werten entsprechen, die für die Steuerung der Motorgeschwindigkeit und
-  -richtung benötigt werden.
-\end{itemize}
+  \textbf{Verbindung herstellen}: Verbinden Sie das Oszilloskop mit den
+  PWM-Ausgängen, die die Motoren steuern. Verwenden Sie geeignete
+  Tastköpfe für Ihre Messungen.
+\item
+  \textbf{Oszilloskop einstellen}: Stellen Sie das Oszilloskop auf eine
+  geeignete Zeitbasis ein, um die PWM-Signale klar zu sehen,
+  typischerweise einige Mikrosekunden pro Division (μs/div), abhängig
+  von der PWM-Frequenz.
+\item
+  \textbf{Messung durchführen}: Beobachten Sie die Pulsbreite und
+  Frequenz der PWM-Signale. Überprüfen Sie, ob diese mit den erwarteten
+  Werten für die Steuerung der Motorgeschwindigkeit und -richtung
+  übereinstimmen.
+\end{enumerate}
 
 \hypertarget{spannungsschwankungen}{%
 \paragraph{Spannungsschwankungen}\label{spannungsschwankungen}}
 
-\begin{itemize}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 
 \item
-  \textbf{Überwachung}: Beobachten Sie die Spannung an den Motoren
-  während des Betriebs. Verwenden Sie die AC-Kopplung Ihres
-  Oszilloskops, um die Spannungsschwankungen zu sehen, oder die
-  DC-Kopplung, um die Gesamtspannung einschließlich der Schwankungen zu
-  messen.
-\end{itemize}
+  \textbf{Verbindung}: Verbinden Sie das Oszilloskop direkt mit den
+  Motoranschlüssen, um die Spannung zu messen.
+\item
+  \textbf{Einstellungen anpassen}: Wählen Sie die AC-Kopplung, um
+  Spannungsschwankungen, oder die DC-Kopplung, um die Gesamtspannung zu
+  beobachten. Stellen Sie die Vertikalskalierung entsprechend der
+  erwarteten Spannungshöhe ein.
+\item
+  \textbf{Beobachtung}: Achten Sie auf Spannungsspitzen oder -einbrüche,
+  die auf Probleme in der Motorsteuerung oder Stromversorgung hinweisen
+  könnten.
+\end{enumerate}
 
 \hypertarget{motorstart--und-stoppzeiten}{%
 \paragraph{Motorstart- und
 Stoppzeiten}\label{motorstart--und-stoppzeiten}}
 
-\begin{itemize}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 
 \item
-  \textbf{Analyse}: Messen Sie, wie schnell die Motoren auf
-  Steuerbefehle reagieren, indem Sie die Zeit zwischen dem Ändern des
-  PWM-Signals und der Reaktion des Motors messen. Dies kann Ihnen
-  helfen, die Effizienz der Bewegungssteuerung zu verbessern.
-\end{itemize}
+  \textbf{Triggerung einstellen}: Verwenden Sie das PWM-Signal als
+  Triggerquelle, um das Oszilloskop zu stabilisieren.
+\item
+  \textbf{Zeit messen}: Messen Sie die Zeit zwischen dem Startsignal
+  (Änderung des PWM-Signals) und der sichtbaren Reaktion des Motors.
+  Verwenden Sie die Cursor-Funktion des Oszilloskops für eine präzise
+  Messung.
+\end{enumerate}
 
 \hypertarget{batterie-messen}{%
 \subsubsection{18650 Batterie messen}\label{batterie-messen}}
@@ -273,28 +482,55 @@ Stoppzeiten}\label{motorstart--und-stoppzeiten}}
 \hypertarget{spannungsverlauf}{%
 \paragraph{Spannungsverlauf}\label{spannungsverlauf}}
 
-\begin{itemize}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 
 \item
-  \textbf{Überwachung}: Schließen Sie das Oszilloskop an die Batterie
-  an, um die Spannung unter Last zu messen. Beobachten Sie, wie die
-  Spannung variiert, wenn der Rover verschiedene Aktionen durchführt, um
-  sicherzustellen, dass die Batterie stabil bleibt und keine
-  unerwünschten Spannungseinbrüche auftreten.
-\end{itemize}
+  \textbf{Verbindung}: Schließen Sie das Oszilloskop direkt an die
+  Batteriepole an.
+\item
+  \textbf{Unter Last messen}: Aktivieren Sie den Rover, um verschiedene
+  Aktionen durchzuführen, und beobachten Sie die Spannung der Batterie
+  unter Last.
+\item
+  \textbf{Analyse}: Achten Sie auf signifikante Spannungseinbrüche oder
+  -spitzen, die auf eine unzureichende Batterieleistung oder potenzielle
+  Probleme in der Stromversorgung hinweisen könnten.
+\end{enumerate}
 
 \hypertarget{stromaufnahme}{%
 \paragraph{Stromaufnahme}\label{stromaufnahme}}
 
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+
+\item
+  \textbf{Shunt-Widerstand}: Schalten Sie einen geeigneten
+  Shunt-Widerstand in Serie zum Stromkreis der Batterie.
+\item
+  \textbf{Verbindung}: Verbinden Sie das Oszilloskop über den
+  Shunt-Widerstand, um die Spannung über diesem zu messen. Die gemessene
+  Spannung ist proportional zum Strom durch den Shunt-Widerstand.
+\item
+  \textbf{Berechnung}: Berechnen Sie den Strom durch den
+  Shunt-Widerstand anhand des Ohmschen Gesetzes (I = V/R), wobei V die
+  gemessene Spannung über dem Shunt und R der Widerstandswert des
+  Shunt-Widerstands ist.
+\end{enumerate}
+
+\hypertarget{zusuxe4tzliche-tipps}{%
+\subsubsection{Zusätzliche Tipps}\label{zusaetzliche-tipps}}
+
 \begin{itemize}
 
 \item
-  \textbf{Messung}: Um den Stromverbrauch zu messen, benötigen Sie
-  möglicherweise ein zusätzliches Strommessgerät oder einen
-  Shunt-Widerstand, über den Sie die Spannung messen können, um den
-  durch ihn fließenden Strom zu berechnen. Verbinden Sie das Oszilloskop
-  in Serie mit dem Strommessgerät oder dem Shunt, um die Veränderungen
-  der Stromaufnahme während des Betriebs zu beobachten.
+  \textbf{Sicherheit}: Achten Sie stets auf die Sicherheit beim Umgang
+  mit elektrischen Komponenten, insbesondere bei der Arbeit mit
+  Batterien und Motoren.
+\item
+  \textbf{Dokumentation}: Halten Sie die Ergebnisse Ihrer Messungen
+  fest, um Veränderungen über die Zeit oder nach Anpassungen im System
+  zu vergleichen.
 \end{itemize}
 
 \hypertarget{shunt-widerstands-fuxfcr-die-strommessung}{%
@@ -363,7 +599,137 @@ hochwertig anerkannt. Ein Beispiel für einen häufig verwendeten
 Shunt-Widerstand ist der Vishay Dale WSBS8518\ldots{} Serie für höhere
 Stromanwendungen, der eine Nennleistung von bis zu 36 W aufweisen kann
 und für Strommessungen in Automotive- und Industrieanwendungen
-entwickelt wurde. % Platzhalter
+entwickelt wurde.
+
+\hypertarget{verhalten-des-rovers-unter-realen-betriebsbedingungen-zu-analysieren}{%
+\subsection{Verhalten des Rovers unter realen Betriebsbedingungen zu
+analysieren}\label{verhalten-des-rovers-unter-realen-betriebsbedingungen-zu-analysieren}}
+
+Für die Analyse des Verhaltens Ihres Rovers unter realen
+Betriebsbedingungen würde ich ein integriertes System aus Datenloggern
+und drahtloser Kommunikation empfehlen, das es ermöglicht, Daten in
+Echtzeit zu erfassen und zu überwachen, während der Rover sich bewegt.
+
+\hypertarget{datenerfassung-und--speicherung}{%
+\subsubsection{Datenerfassung und
+-speicherung}\label{datenerfassung-und--speicherung}}
+
+\begin{itemize}
+
+\item
+  \textbf{Onboard-Datenlogger}: Verwenden Sie SD-Kartenmodule für
+  Arduino oder die SD-Kartenfunktion des Raspberry Pi, um Daten zu
+  speichern, falls die drahtlose Verbindung unterbrochen wird.
+\item
+  \textbf{Datenformatierung}: Implementieren Sie eine
+  Datenspeicherstruktur, die Zeitstempel für jede Messung enthält, um
+  die Analyse zu erleichtern.
+\end{itemize}
+
+\hypertarget{esp32-cam}{%
+\subsubsection{ESP32-CAM}\label{esp32-cam}}
+
+\hypertarget{echtzeit-videouxfcberwachung}{%
+\paragraph{Echtzeit-Videoüberwachung}\label{echtzeit-videoueberwachung}}
+
+\begin{itemize}
+
+\item
+  \textbf{Kamera}: Nutzen Sie die integrierte OV2640 Kamera des
+  ESP32-CAM für Echtzeit-Videoüberwachung oder zur Aufnahme von Fotos.
+  Dies ermöglicht Ihnen, die Umgebung, in der sich der Rover bewegt,
+  visuell zu analysieren und zu dokumentieren.
+\item
+  \textbf{Video Streaming}: Implementieren Sie Video-Streaming über
+  Wi-Fi, um die Live-Bilder vom Rover auf ein Smartphone, Tablet oder
+  einen PC zu übertragen. Dies kann besonders nützlich sein, um die
+  Navigation des Rovers zu überwachen und zu steuern.
+\end{itemize}
+
+\hypertarget{datenerfassung-und--uxfcbertragung}{%
+\paragraph{Datenerfassung und
+-übertragung}\label{datenerfassung-und--uebertragung}}
+
+\begin{itemize}
+
+\item
+  \textbf{Sensordaten}: Neben der Videodaten können Sie auch andere
+  Sensordaten wie Temperatur, Beschleunigung oder sogar die Position
+  (über GPS, falls angeschlossen) erfassen.
+\item
+  \textbf{Drahtlose Kommunikation}: Verwenden Sie Wi-Fi oder Bluetooth
+  für die drahtlose Übertragung dieser Daten in Echtzeit oder speichern
+  Sie die Daten auf einer microSD-Karte für spätere Analysen.
+\end{itemize}
+
+\hypertarget{erweiterte-navigation-und-steuerung}{%
+\paragraph{Erweiterte Navigation und
+Steuerung}\label{erweiterte-navigation-und-steuerung}}
+
+\begin{itemize}
+
+\item
+  \textbf{Integration des geomagnetischen Chips QMC6310}: Nutzen Sie den
+  geomagnetischen Sensor für fortschrittliche Navigationsfunktionen, wie
+  die Bestimmung der Ausrichtung des Rovers. Dies kann für
+  automatisierte Navigationsrouten oder zur Verbesserung der
+  Wegfindungsalgorithmen hilfreich sein.
+\item
+  \textbf{Bewegungserkennung und -analyse}: Analysieren Sie die Bewegung
+  des Rovers durch die Videoaufnahmen, um z.B. die Effizienz der
+  Wegfindung oder das Verhalten bei der Hindernisumgehung zu beurteilen.
+\end{itemize}
+
+\hypertarget{programmierung-und-anpassung}{%
+\paragraph{Programmierung und
+Anpassung}\label{programmierung-und-anpassung}}
+
+\begin{itemize}
+
+\item
+  \textbf{Anpassbare Skripte}: Entwickeln Sie eigene Skripte für die
+  ESP32-CAM, um spezifische Aufgaben wie das Auslösen von Fotos unter
+  bestimmten Bedingungen, die Steuerung der Bewegung basierend auf
+  visuellen Signalen oder die Anpassung der Datenübertragungsraten zu
+  automatisieren.
+\end{itemize}
+
+\hypertarget{sicherheits--und-uxfcberwachungsanwendungen}{%
+\paragraph{Sicherheits- und
+Überwachungsanwendungen}\label{sicherheits--und-ueberwachungsanwendungen}}
+
+\begin{itemize}
+
+\item
+  \textbf{Überwachung}: Setzen Sie den Rover für
+  Sicherheitsüberwachungsaufgaben ein, indem Sie die Kamera nutzen, um
+  Bereiche zu überwachen und bei Erkennung von Bewegungen oder anderen
+  definierten Ereignissen Benachrichtigungen zu senden.
+\end{itemize}
+
+\hypertarget{hinweise-zur-implementierung}{%
+\paragraph{Hinweise zur
+Implementierung}\label{hinweise-zur-implementierung}}
+
+\begin{itemize}
+
+\item
+  Stellen Sie sicher, dass die Stromversorgung des ESP32-CAM Moduls den
+  Anforderungen entspricht, insbesondere wenn Sie planen, es
+  kontinuierlich für Video-Streaming oder umfangreiche Datenerfassung zu
+  nutzen.
+\item
+  Beachten Sie die IO-Pinbelegung und die Funktionen der Pins,
+  insbesondere wenn Sie zusätzliche Sensoren oder Module anschließen
+  möchten.
+\end{itemize}
+
+Das ESP32-CAM Modul bietet eine kostengünstige und flexible Lösung für
+erweiterte Rover-Projekte, die Videoüberwachung und die Erfassung von
+Sensordaten in Echtzeit erfordern. Mit seiner Hilfe können Sie nicht nur
+das Verhalten und die Leistung Ihres Rovers unter verschiedenen
+Bedingungen analysieren, sondern auch innovative Funktionen für
+Navigation, Sicherheit und Interaktion implementieren. % Platzhalter
 
 %% Optional Anhang
 %\clearpage
